# echo-sphere

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  README.md  Taskfile.yaml  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  turbo.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
apps/agent/: README.md  agent.py  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
apps/agent/alembic/: env.py
apps/agent/alembic/versions/: 20241130_0001_001_initial_schema.py  20241130_0002_002_add_recordings.py
apps/agent/src/: __init__.py  main.py
apps/agent/src/adapters/: __init__.py
apps/agent/src/adapters/inbound/: __init__.py  http_server.py  livekit_worker.py  recording_api.py  webhook_handler.py
apps/agent/src/adapters/outbound/: __init__.py  database.py  livekit_egress.py  postgres_recording.py  postgres_session.py  s3_storage.py
apps/agent/src/adapters/shared/: __init__.py  livekit_converters.py
apps/agent/src/application/ports/: __init__.py  egress_port.py  llm_port.py  recording_repository_port.py  session_repository_port.py  storage_port.py  stt_port.py  tts_port.py
apps/agent/src/application/use_cases/: __init__.py  recording_service.py
apps/agent/src/config/: __init__.py  logging.py  settings.py  tracing.py
apps/agent/src/domain/entities/: __init__.py  message.py  recording.py  session.py
apps/agent/src/domain/services/: __init__.py
apps/agent/src/domain/value_objects/: __init__.py  egress.py  storage.py
apps/agent/tests/: __init__.py  conftest.py  factories.py
apps/agent/tests/adapters/inbound/: test_recording_api.py  test_webhook_handler.py
apps/agent/tests/adapters/outbound/: __init__.py  test_livekit_egress.py  test_postgres_recording.py  test_s3_storage.py
apps/agent/tests/adapters/shared/: test_livekit_converters.py
apps/agent/tests/integration/: __init__.py  test_recording_lifecycle.py
apps/agent/tests/unit/: __init__.py  test_message.py  test_recording.py  test_recording_service.py  test_session.py
apps/web/: .env.local.example  biome.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/config/: env.ts
docs/adr/: 001-system-architecture.md  002-recording-pipeline.md  template.md
docs/architecture/: system-overview.md  tech-stack.md
docs/design/: frontend-design-system.md  phase-1-implementation-plan.md  phase-1-voice-interaction.md  phase-2-implementation-plan.md
(+32 files in other folders)
